# hal_inplay

./: CMakeLists.txt  Kconfig  LICENSE  README.md
in6xxe/: CMakeLists.txt  Makefile  in_config.h
in6xxe/ble/: ble_app.c  ble_app.h  ble_defines.h  ble_plt.c
in6xxe/bootloader/inc/: boot_config.h  boot_efuse.h  boot_share.h
in6xxe/bootloader/ram/src/: boot_cfg.c  ram_entry.c
in6xxe/hal/: hal_clk.c  hal_dma.c  hal_ecc.c  hal_efuse.c  hal_global.c  hal_gpio.c  hal_power.c  hal_smem.c  hal_spi_flash.c  hal_timer.c  hal_trng.c  hal_uart.c  hal_wdt.c
in6xxe/inc/: in_ana.h  in_arm.h  in_compile.h  in_debug.h  in_fw_upd.h  in_irq.h  in_mmap.h  in_rom_if.h
in6xxe/inc/ble/: in_ble_api.h  in_ble_att.h  in_ble_conf.h  in_ble_error.h  in_ble_evt.h  in_ble_gap.h  in_ble_gap_evt.h  in_ble_gatt.h  in_ble_gatt_evt.h  in_ble_init.h  in_ble_ipmac.h  in_ble_l2cc.h  in_ble_l2cc_evt.h  in_ble_plt.h  in_ble_prf.h  in_ble_sdr.h
in6xxe/inc/hal/: hal_clk.h  hal_dma.h  hal_ecc.h  hal_efuse.h  hal_flash.h  hal_global.h  hal_gpio.h  hal_i2c.h  hal_i2s.h  hal_icache.h  hal_power.h  hal_pwm.h  hal_smem.h  hal_spi.h  hal_testmux.h  hal_timer.h  hal_trng.h  hal_uart.h  hal_wdt.h
in6xxe/inc/reg/: ahb_trig_reg_c.h  aon_ps_regs_c.h  aon_reg_c.h  audio_regs_c.h  counter_all_apb_reg_c.h  counter_reg_c.h  d2_reg_c.h  dmac_0_c.h  dmac_1_c.h  efusectrl_reg_c.h  fpga_reg_c.h  frontend_regs_c.h  global2_reg_c.h  global_reg_c.h  i2c_0_c.h  i2c_1_c.h  i2s_master_c.h  i2s_slave_c.h  ipmac_reg_c.h  keyboard_reg_c.h  pwm_regs_c.h  rftrx_reg_c.h  rxtx_seq_ctrl_registers_c.h  sadcctrl_reg_c.h  sharedmem_reg_c.h  ssi_master_0_c.h  ssi_master_1_c.h  ssi_slave_0_c.h  timers_add_regs_c.h  timers_regs_c.h  trig_handler_regs_c.h  uart_0_c.h  uart_1_c.h  wdt_c.h
in6xxe/ld/: in_ram.ld  in_rom.ld
in6xxe/rom/: ble_rom.ld  hw_ana_rom.ld
in6xxe/spi_flash/inc/: spi_flash.h
in6xxe/spi_flash/src/: spi_flash.c
in6xxe/startup/: startup_inxxx.s  system_inxxx.c
include/dt-bindings/pinctrl/: in6xxe-mux.h  in6xxe-pinctrl.h
tools/: InPlayToolsSetup.rar
zephyr/: module.yml
